# ViralPyCmdParser

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: basic.yml  release.yml  test.yml
docs/: conf.py  index.rst
src/viralpycmdparser/: cmdparser.py
src/viralpycmdparser/result/: cmdparserresult.py
tests/: test_cmdparser.py
