[tool.poetry]
name = "ViralPyCmdParser"
version = "0.1.0"
description = "A utility to parse command and arguments for Python."
authors = ["Viral Lalakia"]

readme = 'README.md'

repository = "https://github.com/virallalakia/ViralPyCmdParser"
homepage = "https://github.com/virallalakia/ViralPyCmdParser"

keywords = ['parser', 'command', 'arguments', 'command-parser', 'argument-parser']

packages = [
    { include = "viralpycmdparser", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
