[tool.poetry]
name = "ViralPyCmdParser"
version = "0.1.0"
description = "A utility to parse command and arguments for Python."
authors = ["Viral Lalakia"]
license = "MIT"

readme = 'README.md'

repository = "https://github.com/virallalakia/ViralPyCmdParser"
homepage = "https://github.com/virallalakia/ViralPyCmdParser"
documentation = "https://github.com/virallalakia/ViralPyCmdParser/blob/master/README.md"

keywords = ['parser', 'command', 'arguments', 'command-parser', 'argument-parser']

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Utilities"
]

packages = [
    { include = "viralpycmdparser", from = "src" },
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/virallalakia/ViralPyCmdParser/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "viralpycmdparser"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
